test_yuriiq/catalog/language/english/affiliate/password.php
<?php

// text
$_['text_account']	= 'Account';
$_['text_success']	= 'Success: Your password has been successfully updated.';
$_['text_password']	= 'Your Password';

// error
$_['error_password']	= 'Password must be between 4 and 20 characters!';
$_['error_confirm']	= 'Password confirmation does not match password!';

// entry
$_['entry_password']	= 'Password:';
$_['entry_confirm']	= 'Password Confirm:';

// heading
$_['heading_title']	= 'Change Password';
?>